# CosmicComicsRustServer

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  sample.cbr
src/: controllers.rs  endpoints.rs  main.rs  repositories.rs  routes_manager.rs  services.rs  utils.rs
src/controllers/: api_controller.rs  authentication_controller.rs  collectionner_controller.rs  common_controller.rs  database_controller.rs  profile_controller.rs  settings_controller.rs  viewer_controller.rs
src/endpoints/: api_endpoints.rs  authentication_endpoints.rs  collectionner_endpoints.rs  common_endpoints.rs  database_endpoints.rs  profile_endpoints.rs  settings_endpoints.rs  viewer_endpoints.rs
src/repositories/: database_repo.rs  database_repo_tests.rs
src/services/: anilist_service.rs  anilist_service_test.rs  archive_service.rs  archive_service_test.rs  authentification_service.rs  book_service.rs  book_service_test.rs  collectionner_service.rs  collectionner_service_test.rs  converter_service.rs  converter_service_test.rs  googlebooks_service.rs  googlebooks_service_test.rs  marvel_service.rs  marvel_service_test.rs  openlibrary_service.rs  openlibrary_service_test.rs  profile_service.rs  profile_service_test.rs
