[package]
name = "CosmicComicsRustServer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
dotenv = "0.15.0"
tracing-subscriber = "0.3"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "limit"] }
color-thief = "0.2.2"
rgb = "0.8.50"
unrar = "=0.5.8"
chrono = "0.4.40"
md5 = "0.7.0"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1.3"
anyhow = "1.0.97"
webp = "0.3.0"
image = "0.25"
zip = "2.6.1"
walkdir = "2.4.0"
headless_chrome = { version = "1.0.17", features = [
    "fetch",
]}
pdfium-render = "0.8"
mockito = "1.7.0"
tokio-test = "0.4.4"