[package]
name = "cosmic_comics_rust_server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "CosmicComicsRustServer"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
axum-macros = "0.5.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
dotenv = "0.15.0"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "chrono",
] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "limit"] }
rgb = "0.8.52"
unrar = "=0.5.8"
chrono = "0.4.41"
md5 = "0.8.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
urlencoding = "2.1.3"
anyhow = "1.0.99"
webp = "0.3.0"
image = "0.25"
zip = "2.6.1"
walkdir = "2.5.0"
headless_chrome = { version = "1.0.17", features = ["fetch"] }
pdfium-render = "0.8"
regex = "1.11.1"
tokio-cron-scheduler = "0.14.0"
rand = { version = "0.9.2", features = ["alloc"] }
multipart = "0.18.0"
multer = "3.1.0"
futures-util = "0.3"
httpmock = "0.7"
futures = "0.3.31"
tokio-util = "0.7.16"
rust-embed = "8.7.2"

[dev-dependencies]
mockito = "1.7.0"
tokio-test = "0.4.4"
tempfile = "3.20.0"
